[Ultimo commit], terminado controllers casos de uso; registro de cliente